# bean-telegram

./: .gitignore  Dockerfile  Pipfile  TODO.md  beans.py  bot.py  config.py  log.py  main.py  pyproject.toml  requirements.txt  setup.cfg  sync.py
bot/: __init__.py  handlers.py  run.py  storage.py
