[project]
name = "bean-telegram"
version = "0.1.0"
description = ""
authors = [{ name = "Leo", email = "leononame@lho.io" }]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "beancount (>=2.2.0,<3.0.0)",
    "python-telegram-bot (>=12.2.0,<13.0.0)",
    "webdavclient3 (>=3.14.6,<4.0.0)",
    "standard-imghdr (>=3.13.0,<4.0.0)",
    "urllib3 (==1.26.9)",
    "requests (>=2.32.3,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
